--- a/web/dado.html
+++ b/web/dado.html
@@ -9,11 +9,11 @@
         </script>
         <script>
         </script>
-        <title>webSchool :: Alteração de Aluno</title>
+        <title>PGO Manager :: Alteração de Aluno</title>
     </head>
     <body>
         <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-            <a class="navbar-brand" href="../../">webSchool</a>
+            <a class="navbar-brand" href="../../">PGO Manager</a>
             <div class="collapse navbar-collapse" id="navbarsExampleDefault">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item dropdown">
