--- a/web/dados.html
+++ b/web/dados.html
@@ -37,11 +37,11 @@
         });        
         
         </script>
-        <title>webSchool :: Cadastro de Alunos</title>
+        <title>PGO Manager :: Cadastro</title>
     </head>
     <body>
         <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-            <a class="navbar-brand" href="../">webSchool</a>
+            <a class="navbar-brand" href="../">PGO Manager</a>
             <div class="collapse navbar-collapse" id="navbarsExampleDefault">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item dropdown">
