--- a/web/index.html
+++ b/web/index.html
@@ -7,11 +7,11 @@
         <link href="includes/css/navbar.css" rel="stylesheet">
         <link href="includes/css/login.css" rel="stylesheet">
         <script src="includes/js/jquery.js"></script>
-        <title>webSchool :: Home Page</title>
+        <title>PGO Manager :: Home Page</title>
     </head>
     <body>
         <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-            <a class="navbar-brand" href="../">webSchool</a>
+            <a class="navbar-brand" href="../">PGO Manager</a>
             <div class="collapse navbar-collapse" id="navbarsExampleDefault">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item dropdown">
@@ -32,7 +32,7 @@
             
                 Este é um site exemplo de um sistema web feito em PHP.<p/>
 
-                <a href="dados" class="btn btn-light btn btn-block">Ver dados</a>
+                <a href="reader" class="btn btn-light btn btn-block">Reader</a>
             </div>
         </div>
 
