--- a/web/reader.html
+++ b/web/reader.html
@@ -78,11 +78,11 @@
         });        
         
         </script>
-        <title>webSchool :: Cadastro de Alunos</title>
+        <title>PGO Manager :: Cadastro</title>
     </head>
     <body>
         <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-            <a class="navbar-brand" href="home">webSchool</a>
+            <a class="navbar-brand" href="home">PGO Manager</a>
             <div class="collapse navbar-collapse" id="navbarsExampleDefault">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item dropdown">
