feat: changed status display on template

--- a/web/reader.html
+++ b/web/reader.html
@@ -72,8 +72,9 @@
                     <img class="card-img-top" src="..." alt="(pokemon image)">
                     <div class="card-body">
                         <h5 class="card-title nome"></h5>
-                        <small>ATK | DEF | STA</small><br/>
-                        <small>100 | 100 | 100</small>
+                        <span class="badge badge-pill badge-danger">Primary</span>
+                        <span class="badge badge-pill badge-success">Primary</span>
+                        <span class="badge badge-pill badge-primary">Primary</span>
                         <hr/>
                         <p class="card-text">Attack</p>
                         <table class="table-borderless" style="margin: 0 auto;width: 100%;text-align: center;">
