--- a/web/reader.html
+++ b/web/reader.html
@@ -31,6 +31,16 @@
                 "Fighting": "brown",
             }
 
+            function disableMove(value, target) {
+                $('#' + target + " option").each(function(){
+                    if ($(this).val() == value) {
+                        $(this).attr('disabled', 'disabled')
+                    } else {
+                        $(this).removeAttr('disabled')
+                    }
+                });
+            }
+
             function clearLayout(slot) {
                 $('.resistant_to-' + slot).html('');
                 $('.vulnerable_to-' + slot).html('');
@@ -108,6 +118,30 @@
                 pokemonSelectSlot3.select2();
                 pokemonSelectSlot3.on('change', function(){
                     getPokemonData(this.value, this.id);
+                });
+
+                $('#charge1_move-slot1').on('change', function() {
+                    disableMove(this.value, 'charge2_move-slot1');
+                });
+
+                $('#charge2_move-slot1').on('change', function() {
+                    disableMove(this.value, 'charge1_move-slot1');
+                });
+
+                $('#charge1_move-slot2').on('change', function() {
+                    disableMove(this.value, 'charge2_move-slot2');
+                });
+
+                $('#charge2_move-slot2').on('change', function() {
+                    disableMove(this.value, 'charge1_move-slot2');
+                });
+
+                $('#charge1_move-slot3').on('change', function() {
+                    disableMove(this.value, 'charge2_move-slot3');
+                });
+
+                $('#charge2_move-slot3').on('change', function() {
+                    disableMove(this.value, 'charge1_move-slot3');
                 });
 
             });
